<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_tracks_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_behavior="com.xrdev.musicastmaterial.utils.FlingBehavior">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="20dp"
            app:expandedTitleMarginEnd="20dp"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
            app:title="MusicastMaterial">


            <ImageView
                android:id="@+id/appbar_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:alpha="0.3"
                android:src="@drawable/bg_header_placeholder"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/app_bar_collapsible_height"
                android:orientation="vertical"
                android:gravity="center"
                >

                <ImageView
                    android:id="@+id/appbar_art"
                    android:layout_width="@dimen/app_bar_image_height"
                    android:layout_height="@dimen/app_bar_image_height"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bg_default_playlist_art"
                     />

            </LinearLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"
                >


            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <!-- Fim do layout da toolbar -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/pbar_linear"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:indeterminate="false"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foreground="@drawable/header_shadow"
            android:id="@+id/frame_container">
        </FrameLayout>

    </LinearLayout>



    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menu_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        fab:menu_icon="@drawable/ic_action_toc"
        app:layout_behavior="com.xrdev.musicastmaterial.utils.FloatingActionMenuBehavior">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_add_pl_to_queue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_av_playlist_add"
            fab:fab_size="mini"
            fab:fab_label="@string/add_all_tracks_to_queue" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_swap_pl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_replace"
            fab:fab_size="mini"
            fab:fab_label="@string/replace_all_tracks" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_become_host"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_host_160"
            fab:fab_size="mini"
            fab:fab_label="@string/action_become_host" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_stop_hosting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_swap_horiz_white_48dp"
            fab:fab_size="mini"
            fab:fab_label="@string/action_stop_hosting" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_switch_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_swap_horiz_white_48dp"
            fab:fab_size="mini"
            fab:fab_label="@string/action_switch_to_party" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_swap_horiz_white_48dp"
            fab:fab_size="mini"
            fab:fab_label="@string/action_logout" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_swap_horiz_white_48dp"
            fab:fab_size="mini"
            fab:fab_label="@string/title_spotify_login" />

    </com.github.clans.fab.FloatingActionMenu>
</android.support.design.widget.CoordinatorLayout>
