<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/bottom_sheet"
    android:gravity="center|top"
    tools:context="com.xrdev.musicastmaterial.activities.BaseActivity"
    android:background="@color/colorPrimary">


    <RelativeLayout
        xmlns:tools="http:schemas.android.com/tools"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/top_container"
        android:gravity="center|top">



        <FrameLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/playing_track_container"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:gravity="center|top"
            tools:context="com.xrdev.musicastmaterial.activities.BaseActivity">


        </FrameLayout>

    </RelativeLayout>

    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/media_controls_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_container"
        android:gravity="center|top"
        tools:context="com.xrdev.musicastmaterial.activities.BaseActivity">

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            android:id="@+id/imagebutton_play_pause"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_action_play"
            android:contentDescription="@string/play_pause" />

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleType="fitCenter"
            android:layout_marginLeft="20dp"
            android:background="@android:color/transparent"
            android:id="@+id/imagebutton_next"
            android:src="@drawable/ic_action_next"
            android:layout_toEndOf="@+id/imagebutton_play_pause"
            android:layout_alignTop="@+id/imagebutton_play_pause"
            android:layout_toRightOf="@+id/imagebutton_play_pause"
            android:contentDescription="@string/next" />

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleType="fitCenter"
            android:layout_marginRight="20dp"
            android:background="@android:color/transparent"
            android:id="@+id/imagebutton_previous"
            android:src="@drawable/ic_action_previous"
            android:layout_toStartOf="@+id/imagebutton_play_pause"
            android:layout_alignTop="@+id/imagebutton_play_pause"
            android:layout_toLeftOf="@+id/imagebutton_play_pause"
            android:contentDescription="@string/previous" />

    </RelativeLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@android:color/darker_gray"
        android:layout_below="@+id/media_controls_layout"
        android:id="@+id/play_queue_text"
        android:text="@string/play_queue"/>


    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/play_queue_list"
        android:layout_below="@id/play_queue_text"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>